--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -19,7 +19,6 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.3.74;
 allow 104.219.236.100;
-allow 104.219.236.165;
 allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
@@ -71,6 +70,7 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
+allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -229,6 +229,7 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.250.84.79;
+allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
@@ -271,12 +272,12 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.6;
-allow 185.14.31.113;
 allow 185.146.232.234;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.177.151.34;
 allow 185.183.157.214;
@@ -505,7 +506,6 @@ allow 185.56.171.94;
 allow 185.56.83.83;
 allow 185.67.82.114;
 allow 185.82.219.109;
-allow 185.84.31.254;
 allow 188.165.200.97;
 allow 188.214.104.21;
 allow 188.239.191.25;
@@ -609,7 +609,6 @@ allow 194.15.115.212;
 allow 194.15.36.117;
 allow 194.163.157.49;
 allow 194.233.174.56;
-allow 194.26.192.66;
 allow 194.26.192.77;
 allow 194.42.196.34;
 allow 194.87.55.98;
@@ -1030,6 +1029,7 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
+allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1242,7 +1242,6 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
-allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
@@ -1260,11 +1259,16 @@ allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
+allow 2a04:52c0:104:31e6::1;
+allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
+allow 2a04:52c0:105:82c0::1;
+allow 2a04:52c0:105:d7eb::1;
+allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
+allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
@@ -1284,6 +1288,7 @@ allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
+allow 2a06:1700:0:50::11;
 allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
@@ -1665,7 +1670,6 @@ allow 45.138.16.113;
 allow 45.138.16.161;
 allow 45.138.16.164;
 allow 45.138.16.178;
-allow 45.138.16.221;
 allow 45.138.16.222;
 allow 45.138.16.230;
 allow 45.138.16.231;
@@ -1684,7 +1688,6 @@ allow 45.141.215.169;
 allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.200;
-allow 45.141.215.207;
 allow 45.141.215.21;
 allow 45.141.215.28;
 allow 45.141.215.40;
@@ -1790,10 +1793,13 @@ allow 51.81.222.62;
 allow 5.181.80.107;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.101.10;
+allow 5.255.100.224;
+allow 5.255.100.26;
+allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
+allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
 allow 5.255.118.183;
@@ -1808,6 +1814,8 @@ allow 5.255.97.221;
 allow 5.255.98.151;
 allow 5.255.98.198;
 allow 5.255.98.23;
+allow 5.255.99.124;
+allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
 allow 5.2.72.110;
@@ -1885,7 +1893,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
