--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -124,6 +124,7 @@ set_real_ip_from 135.125.239.70;
 set_real_ip_from 136.175.8.45;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 138.59.18.110;
+set_real_ip_from 138.68.144.236;
 set_real_ip_from 139.162.90.140;
 set_real_ip_from 139.99.172.11;
 set_real_ip_from 139.99.8.57;
@@ -628,6 +629,9 @@ set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
+set_real_ip_from 198.251.84.163;
+set_real_ip_from 198.251.84.237;
+set_real_ip_from 198.251.88.18;
 set_real_ip_from 198.251.89.96;
 set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.212.160;
@@ -1013,6 +1017,7 @@ set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.224;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
